--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -24,7 +24,7 @@ ion-select {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: url(../../assets/img/78c00f32a293bde01481a7429502d876.jfif);
+  background-image: url(../../../assets/img/78c00f32a293bde01481a7429502d876.jfif);
   border-radius: 15px;
 }
 
