--- a/src/global.scss
+++ b/src/global.scss
@@ -25,8 +25,26 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-ion-content {
+ion-header,
+.toolbar-container,
+ion-toolbar {
+  height: 150px;
+  min-height: 150px;
+
+}
+
+ion-content,
+ion-toolbar {
   --ion-background-color: var(--ion-color-black);
+}
+
+.header-md::after {
+  position: absolute;
+  width: 100%;
+  height: 0;
+  top: 151px;
+  opacity: 0.03;
+  border: 0.5px solid var(--ion-color-white);
 }
 
 /* Set the placeholder color and opacity */
@@ -58,6 +76,7 @@ ion-select::part(icon) {
   width: 13em;
   margin-top: 0.5em;
 }
+
 .swiper-wrapper {
   height: unset;
 }
