--- a/src/app/pages/disabled-event/disabled-event.page.html
+++ b/src/app/pages/disabled-event/disabled-event.page.html
@@ -1,9 +1,7 @@
 <ion-content [fullscreen]="true">
-
   <ion-grid>
     <ion-row detail class="ion-justify-content-center m" lines="none">
       <ion-select placeholder="Select city">
-
         <ion-select-option value="germany">
           germany
         </ion-select-option>
@@ -15,7 +13,7 @@
     </ion-row>
     <ion-row class="detailEventGroup">
       <ion-row class="cover">
-          <div class="image"></div>
+        <div class="image"></div>
       </ion-row>
       <ion-row class="buttonActions">
         <ion-col size="4">
@@ -28,7 +26,7 @@
           </ion-button>
         </ion-col>
         <ion-col size="4">
-          <ion-button
+          <ion-button disabled
             class="buttonAction buttonActionCenter"
             expand="full"
             fill="clear"
@@ -37,16 +35,15 @@
           </ion-button>
         </ion-col>
         <ion-col size="4">
-          <ion-button [routerLink]="['/disabled-event']"
-                      class="buttonAction buttonActionRight"
-                      expand="full"
-                      fill="clear"
-                      size="large"
+          <ion-button disabled
+            class="buttonAction buttonActionRight"
+            expand="full"
+            fill="clear"
+            size="large"
           >BUY TICKET
           </ion-button>
         </ion-col>
       </ion-row>
-
       <ion-row class="Event" [routerLink]="['/confirmation']">
         <ion-row class="detailEvent">
           <ion-col size="8">
