--- a/src/app/pages/event-details/event-details.page.html
+++ b/src/app/pages/event-details/event-details.page.html
@@ -3,15 +3,16 @@
     <ion-buttons class="arrowBack" slot="start" [routerLink]="['/home']">
       <ion-icon name="chevron-back-outline"></ion-icon>
     </ion-buttons>
-    <ion-title>Confirmation</ion-title>
-    <ion-buttons slot="end" [routerLink]="['/event-details']">
-      <ion-button>Details</ion-button>
-    </ion-buttons>
+    <ion-title>Event details</ion-title>
+
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row class="detailEventGroup">
+      <ion-row class="rowCover">
+        <div class="imageCover"></div>
+      </ion-row>
       <ion-row class="cover ion-justify-content-center">
         <div class="image"></div>
         <p>LP</p>
@@ -25,20 +26,6 @@
         </ion-row>
         <ion-row class="hr">
           <hr/>
-        </ion-row>
-        <ion-row class="peopleRow">
-          <ion-col
-            size="6"
-            class="peopleDetailLeft ion-justify-content-center "
-          >
-            <ion-label>Geust</ion-label>
-          </ion-col>
-          <ion-col
-            size="6"
-            class="peopleDetailRight ion-justify-content-center ion-text-end"
-          >
-            <ion-label>John smith</ion-label>
-          </ion-col>
         </ion-row>
         <ion-row class="peopleRow">
           <ion-col
