--- a/src/app/pages/event-details/event-details.page.scss
+++ b/src/app/pages/event-details/event-details.page.scss
@@ -8,6 +8,24 @@
   justify-content: center;
   height: 56px;
 }
+.rowCover {
+  width: 370px;
+  height: 220px;
+  background: var(--ion-color-black);
+  opacity: 0.9;
+  border-radius: 15px;
+}
+.rowCover .imageCover {
+  background-color: var(--ion-color-pink);
+  mix-blend-mode: color-dodge;
+  width: 100%;
+  height: auto;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(../../../assets/img/78c00f32a293bde01481a7429502d876.jfif);
+  border-radius: 15px;
+}
 
 .arrowBack ion-icon {
   width: 100%;
@@ -80,14 +98,15 @@ ion-buttons ion-button {
 .cover {
   width: 370px;
   height: 150px;
-  background: var(--ion-color-black);
-  opacity: 0.9;
+  background: transparent;
+  opacity: 1;
   border-radius: 15px;
   justify-content: center;
   flex-direction: row;
+  z-index: 99;
   flex: 0 2;
   text-align: center;
-  margin: 0 auto;
+  margin: -50px auto 0;
 
 }
 
@@ -225,7 +244,6 @@ hr {
   padding: 0 30px;
 
 }
-
 
 
 .listEvent ion-card {
