--- a/src/global.scss
+++ b/src/global.scss
@@ -32,7 +32,11 @@ ion-toolbar {
   min-height: 150px;
 
 }
+.flag.flag-24 {
 
+  background-image: url('assets/icon/custom-menu.svg');
+
+}
 ion-content,
 ion-toolbar {
   --ion-background-color: var(--ion-color-black);
