fixer probleme checkbox et margin top

--- a/src/app/pages/event-details/event-details.page.scss
+++ b/src/app/pages/event-details/event-details.page.scss
@@ -4,9 +4,10 @@
       318.21deg, #2C3036 14.05%, #31343C 85.29%);
   box-shadow: 4px 4px 11px rgb(31 36 39 / 80%), -1px -1px 5px 4px rgb(72 78 83 / 60%);
   border-radius: 15px;
-  width: 56px;
   justify-content: center;
-  height: 56px;
+  width: 40px;
+  height: 40px;
+  margin-top: 20px;
 }
 .rowCover {
   width: 370px;
