--- a/src/app/pages/main-disabled/main-disabled.page.html
+++ b/src/app/pages/main-disabled/main-disabled.page.html
@@ -78,7 +78,7 @@
               <img src="../../assets/img/cover1.jfif"/>
             </div>
             <ion-card-header>
-              <ion-card-title>Event 1</ion-card-title>
+              <ion-card-title class="ion-text-center">Event 1</ion-card-title>
             </ion-card-header>
             <ion-card-content>Love + Propoganda</ion-card-content>
           </ion-card>
@@ -89,7 +89,7 @@
               <img src="../../assets/img/cover2.jfif"/>
             </div>
             <ion-card-header>
-              <ion-card-title>Event 2</ion-card-title>
+              <ion-card-title class="ion-text-center">Event 2</ion-card-title>
             </ion-card-header>
             <ion-card-content>Love + Propoganda</ion-card-content>
           </ion-card>
@@ -100,7 +100,7 @@
               <img src="../../assets/img/cover3.jfif"/>
             </div>
             <ion-card-header>
-              <ion-card-title>Event 1</ion-card-title>
+              <ion-card-title class="ion-text-center">Event 1</ion-card-title>
             </ion-card-header>
             <ion-card-content>Love + Propoganda</ion-card-content>
           </ion-card>
@@ -111,7 +111,7 @@
               <img src="../../assets/img/cover4.jfif"/>
             </div>
             <ion-card-header>
-              <ion-card-title>Event 1</ion-card-title>
+              <ion-card-title class="ion-text-center">Event 1</ion-card-title>
             </ion-card-header>
             <ion-card-content>Love + Propoganda</ion-card-content>
           </ion-card>
