--- a/src/app/pages/main-select/main-select.page.html
+++ b/src/app/pages/main-select/main-select.page.html
@@ -75,7 +75,7 @@
               <img src="../../assets/img/cover1.jfif"/>
             </div>
             <ion-card-header>
-              <ion-card-title>Event 1</ion-card-title>
+              <ion-card-title class="ion-text-center">Event 1</ion-card-title>
             </ion-card-header>
             <ion-card-content>Love + Propoganda</ion-card-content>
           </ion-card>
@@ -86,7 +86,7 @@
               <img src="../../assets/img/cover2.jfif"/>
             </div>
             <ion-card-header>
-              <ion-card-title>Event 2</ion-card-title>
+              <ion-card-title class="ion-text-center">Event 2</ion-card-title>
             </ion-card-header>
             <ion-card-content>Love + Propoganda</ion-card-content>
           </ion-card>
@@ -97,7 +97,7 @@
               <img src="../../assets/img/cover3.jfif"/>
             </div>
             <ion-card-header>
-              <ion-card-title>Event 1</ion-card-title>
+              <ion-card-title class="ion-text-center">Event 1</ion-card-title>
             </ion-card-header>
             <ion-card-content>Love + Propoganda</ion-card-content>
           </ion-card>
@@ -108,7 +108,7 @@
               <img src="../../assets/img/cover4.jfif"/>
             </div>
             <ion-card-header>
-              <ion-card-title>Event 1</ion-card-title>
+              <ion-card-title class="ion-text-center">Event 1</ion-card-title>
             </ion-card-header>
             <ion-card-content>Love + Propoganda</ion-card-content>
           </ion-card>
