--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -64,7 +64,9 @@
         <ion-label>Automatic Login</ion-label>
       </ion-col>
       <ion-col class="colCheckbox" size="6">
-        <ion-checkbox></ion-checkbox>
+        <div class="checkbox">
+        <ion-checkbox (click)="onCheck()" ></ion-checkbox>
+        </div>
       </ion-col>
     </ion-row>
 
