--- a/src/app/pages/main/main.page.scss
+++ b/src/app/pages/main/main.page.scss
@@ -10,6 +10,7 @@ ion-select {
 }
 
 .cover {
+  margin: 0 auto;
   width: 370px;
   height: 220px;
   background: var(--ion-color-black);
@@ -79,14 +80,17 @@ ion-select {
   box-shadow: 3.88889px 3.88889px 16.6667px #1f2427;
   border-radius: 15px;
 }
+
 .detailEventGroup {
   margin: 38px 30px 0 30px;
 }
+
 .detailEvent {
   height: 100%;
   flex: 1 1 100%;
   margin: 0 20px;
 }
+
 .detailEvent ion-col h3 {
   font-family: var(--font-primary);
   font-style: normal;
@@ -106,9 +110,11 @@ ion-select {
   color: var(--ion-color-pink);
   margin-top: 0;
 }
+
 .detailEvent .dateCol {
   align-self: flex-end;
 }
+
 .detailEvent .dateCol p {
   font-family: var(--font-primary);
   font-style: normal;
@@ -125,6 +131,7 @@ ion-select {
   flex: 1 1 100%;
   margin: 0 20px 30px 20px;
 }
+
 hr {
   opacity: 0.06;
   border: 0.3px solid var(--ion-color-white);
@@ -132,11 +139,13 @@ hr {
   width: 100%;
   height: 0;
 }
+
 .peopleRow {
   height: 100%;
   flex: 1 1 100%;
   margin-bottom: 30px;
 }
+
 .peopleDetail {
   width: 100%;
   max-width: 100%;
@@ -144,9 +153,11 @@ hr {
   display: flex;
   grid-gap: 8px;
 }
+
 .peopleDetail ion-icon {
   color: var(--ion-color-grey);
 }
+
 .peopleDetail ion-label {
   font-family: var(--font-primary);
   font-style: normal;
@@ -155,12 +166,14 @@ hr {
   line-height: 18px;
   color: var(--ion-color-white);
 }
+
 .descriptionEvent {
   height: 114px;
   background: linear-gradient(0.06deg, #25272d 0.35%, #4c515d 192.77%);
   opacity: 0.5;
   border-radius: 15px;
 }
+
 .descriptionEvent p {
   height: 18px;
   font-family: var(--font-primary);
@@ -182,15 +195,14 @@ hr {
 .listEvent ion-card {
   margin: 0;
   padding: 0;
-  border-radius: 15px 15px 0px 0px;
   width: 123px;
-  height: 124px;
+  height: 50%;
   background: linear-gradient(0.06deg, #2e3138 0.35%, #3d4148 192.77%);
-  // box-shadow: 3.88889px 3.88889px 16.6667px #1f2427;
   border-radius: 15px;
 }
+
 .listEvent div {
-  width: 123px;
+  width: 153px;
   height: 72px;
   left: 29px;
   top: 745px;
@@ -198,21 +210,25 @@ hr {
   mix-blend-mode: color-dodge;
   border-radius: 15px 15px 0px 0px;
 }
+
 .listEvent div {
   width: 123px;
   height: 72px;
   border-radius: 15px 15px 0px 0px;
 }
+
 .listEvent div img {
   width: 100%;
   height: 100%;
   position: relative;
   display: block;
 }
+
 ion-card-header {
   padding-bottom: 0;
   padding-top: 7px;
 }
+
 ion-card-title {
   font-family: var(--font-primary);
   font-style: normal;
@@ -223,6 +239,7 @@ ion-card-title {
   text-align: left;
 
 }
+
 ion-card-content {
   font-family: var(--font-primary);
   font-style: normal;
@@ -233,11 +250,22 @@ ion-card-content {
 
   color: var(--ion-color-grey);
 }
-ion-slides{
+
+ion-slides {
   height: 160px;
 
 }
 
-ion-slide{
-  //flex: 1 1 0;
+
+
+.settings {
+  --background: linear-gradient(
+      318.21deg, #2C3036 14.05%, #31343C 85.29%);
+  box-shadow: 4px 4px 11px rgb(31 36 39 / 80%), -1px -1px 5px 4px rgb(72 78 83 / 60%);
+  border-radius: 15px;
+  width: 40px;
+  justify-content: center;
+  font-size: 12px;
+  height: 40px;
+  margin: 49px 30px 0 0;
 }
