--- a/src/app/pages/ticket/ticket.page.html
+++ b/src/app/pages/ticket/ticket.page.html
@@ -53,6 +53,7 @@
           </ion-col>
 
         </ion-row>
+        <hr class="dashedHr">
         <ion-row class="reqRow">
           <ion-col
             size="12"
