--- a/src/app/pages/event-details/event-details.page.scss
+++ b/src/app/pages/event-details/event-details.page.scss
@@ -1,5 +1,5 @@
 .arrowBack {
-  margin: 0 0 0 30px;
+  margin: 0 0 0 20px;
   background: linear-gradient(
       318.21deg, #2C3036 14.05%, #31343C 85.29%);
   box-shadow: 4px 4px 11px rgb(31 36 39 / 80%), -1px -1px 5px 4px rgb(72 78 83 / 60%);
@@ -7,25 +7,28 @@
   justify-content: center;
   width: 40px;
   height: 40px;
-  margin-top: 20px;
 }
+
 .rowCover {
-  width: 370px;
-  height: 220px;
+  width: 300px;
+  height: 200px;
   background: var(--ion-color-black);
-  opacity: 0.9;
-  border-radius: 15px 15px  0 0;
+  //opacity: 0.9;
+  border-radius: 15px 15px 0 0;
+  margin: 0 auto;
+
 }
+
 .rowCover .imageCover {
   background-color: var(--ion-color-pink);
-  mix-blend-mode: color-dodge;
+  //mix-blend-mode: color-dodge;
   width: 100%;
   height: auto;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: url(../../../assets/img/78c00f32a293bde01481a7429502d876.jfif);
-  border-radius: 15px 15px  0 0;
+  background-image: url(../../../assets/img/cover.png);
+  border-radius: 15px 15px 0 0;
 }
 
 .arrowBack ion-icon {
@@ -35,7 +38,7 @@
 }
 
 ion-title {
-  margin: 67px auto;
+  margin: 0 auto;
   font-family: var(--font-primary);
   font-style: normal;
   font-weight: 500;
@@ -66,7 +69,7 @@ ion-buttons ion-button {
 }
 
 .detailEventGroup {
-  margin: 38px 30px 0 30px;
+  margin: 20px 10px 0 10px;
 }
 
 .detailEvent {
@@ -97,7 +100,7 @@ ion-buttons ion-button {
 }
 
 .cover {
-  width: 370px;
+  width: 300px;
   height: 150px;
   background: transparent;
   opacity: 1;
@@ -142,9 +145,6 @@ ion-buttons ion-button {
   border-radius: 15px;
 }
 
-.detailEventGroup {
-  margin: 38px 30px 0 30px;
-}
 
 .detailEvent {
   height: 100%;
