--- a/src/app/pages/ticket/ticket.page.scss
+++ b/src/app/pages/ticket/ticket.page.scss
@@ -444,3 +444,20 @@ ion-icon .customClose {
   height: 702px;
   opacity: 0.12;
 }
+
+.reqRow {
+  margin: 0 auto;
+}
+
+.reqCol {
+  width: 300px !important;
+}
+
+.dashedHr {
+  position: absolute;
+  width: 338px;
+  height: 0px;
+  left: -3px;
+  top: 570px;
+  border: 1px dashed rgba(239, 239, 239, 0.25);
+}
